# watchtower

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  activate.sh  config.yaml  pyproject.toml  start.sh
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
ai/: analyst.py
alerts/: __init__.py  engine.py  rules.py
app/: __init__.py  streamlit_app.py
app/providers/: __init__.py
app/providers/analytics/: __init__.py  basic_metrics.py  performance.py
app/providers/store/: __init__.py  sqlite_store.py
data/: alert_state.json  alerts.jsonl.bak
docs/plans/: 2026-02-23-rigorous-backtest.md  2026-02-26-daily-review-design.md  2026-02-26-daily-review-impl.md
jobs/: __init__.py  backtest.py  daily_review.py  ingest.py  param_sweep.py  review.py  walk_forward.py
notify/: telegram.py
scripts/: __init__.py  compare_ai.sh  smoke_fetch.py
tests/: __init__.py  test_alerts_p0.py  test_backtest_engine.py  test_daily_review.py  test_param_sweep.py  test_performance.py  test_smoke.py  test_walk_forward.py
watchtower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
